--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                       <li class="nav-item">
-                        <a class="nav-link active fs-5" aria-current="page" href="index.html">Inicio</a>
+                        <a class="nav-link active fs-6" aria-current="page" href="index.html">Inicio</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link fs-5" href="../pages/planes.html">Planes</a>
+                        <a class="nav-link fs-6" href="../pages/explorar.html">Explorar productos</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link fs-5" href="../pages/explorar.html">Explorar</a>
+                        <a class="nav-link fs-6" href="../pages/planes.html">Personaliza tu plan</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link fs-5" href="../pages/nosotros.html">Personas</a>
+                        <a class="nav-link fs-6" href="../pages/nosotros.html">Personas</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link fs-5" href="../pages/ayuda.html">Ayuda</a>
+                        <a class="nav-link fs-6" href="../pages/ayuda.html">Ayuda</a>
                       </li>
                     </ul>
                   </div>
@@ -45,29 +45,28 @@
     </header>
     <section class=" hero-home hero-background-home">
         <div class="container-hero">
-            <h1 class="title-xl black-color">Un espacio para vender tus productos frescos</h1>
-            <p class="text-size-normal black-color">Te ayudamos a que llegues a miles de personas con tus productos productos frescos.</p>
-            <button class="button-primary"><a href="">Inicia de forma gratuita</a></button>
+            <h1 class="title-xl black-color">Productos frescos hasta la puerta de tu casa.</h1>
+            <p class="text-size-normal black-color">Encontrarás miles productos frescos de las granjas más cercanas a tu ubicación.</p>
+            <button class="button-primary"><a href="">Ver productos</a></button>
         </div>
     </section>
     <section class="container-md grid-card-x3">
         <div class="card-features content-card">
             <i class="fas fa-star-of-life fa-2x gap-tb-item-1 icon"></i>
             <h2 class="title-s gap-tb-item-1 ">Sin intermediarios</h2>
-            <p class="text-size-normal gap-tb-item-1">Tus clientes hacen el pedido directo a tu catálogo.</p>
+            <p class="text-size-normal gap-tb-item-1">Tus pedidos son enviados directo del agricultor.</p>
+        </div>
+        <div class="card-features content-card">
+            <i class="fas fa-piggy-bank  fa-2x gap-tb-item-1 icon"></i>
+            <h2 class="title-s gap-tb-item-1 ">Sin tiendas caras</h2>
+            <p class="text-size-normal gap-tb-item-1">Una aplicación con productos frescos y un precio justo.</p>
         </div>
         <div class="card-features content-card">
             <i class="fas fa-laugh-beam fa-2x gap-tb-item-1 icon"></i>
-            <h2 class="title-s gap-tb-item-1 ">Vende simple</h2>
-            <p class="text-size-normal gap-tb-item-1">Ofrece tus productos frescos a precio justo.</p>
-        </div>
-        <div class="card-features content-card">
-            <i class="fas fa-piggy-bank fa-2x gap-tb-item-1 icon"></i>
-            <h2 class="title-s gap-tb-item-1 ">Sin comisiones</h2>
-            <p class="text-size-normal gap-tb-item-1">Puedes vender gratis y sin letra chica.</p>
+            <h2 class="title-s gap-tb-item-1 ">Más rápido</h2>
+            <p class="text-size-normal gap-tb-item-1">Tus productos llegan frescos y puntual.</p>
         </div>
     </section>
-    
     <section class="container-md">
         <div class="card-wide">
             <a href="pages/planes.html">
@@ -87,7 +86,7 @@
                 <div class="content-card">
                     <i class="fas fa-globe-americas fa-2x gap-tb-item-1 icon"></i>
                     <h2 class="subtitle gap-tb-item-1">Cuidamos el planeta</h2>
-                    <p class="text-size-normal gap-tb-item-1">Fomentamos el uso responsable del agua, reducir los desperdicios y evitar el plasticos de un solo uso.</p>
+                    <p class="text-size-normal gap-tb-item-1">Fomentamos el uso responsable del agua, reducir los desperdicios y evitar el plástico de un solo uso.</p>
                 </div>
             </a>
          </div>
