--- a/pages/planes.html
+++ b/pages/planes.html
@@ -23,19 +23,19 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                       <li class="nav-item">
-                        <a class="nav-link fs-5" aria-current="page" href="../index.html">Inicio</a>
+                        <a class="nav-link fs-6" aria-current="page" href="../index.html">Inicio</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link active fs-5" href="../pages/planes.html">Planes</a>
+                        <a class="nav-link fs-6" href="../pages/explorar.html">Explorar productos</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link fs-5" href="../pages/explorar.html">Explorar</a>
+                        <a class="nav-link active fs-6" href="../pages/planes.html">Personaliza tu plan</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link fs-5" href="../pages/nosotros.html">Personas</a>
+                        <a class="nav-link fs-6" href="../pages/nosotros.html">Personas</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link fs-5" href="../pages/ayuda.html">Ayuda</a>
+                        <a class="nav-link fs-6" href="../pages/ayuda.html">Buscar una tienda</a>
                       </li>
                     </ul>
                   </div>
@@ -44,31 +44,35 @@
     </header>
     <section class="hero hero-page">
         <div class="content">    
-            <h1 class="title-xl gap-tb-item-2">Descubre las características de los planes que tenemos para ti</h1>
-            <p class="text-size-normal">Maneje su inventario y venda desde un mismo sitio</p>
+            <h1 class="title-xl gap-tb-item-2">Envíos sin costo ilimitados. Ahorra más con Cuenta Lemon</h1>
         </div>
     </section>
     <section class="container-md">
         <div class="grid-card-x2">
             <div class="card-text space-left">
                 <i class="fas fa-seedling fa-4x gap-tb-item-1"></i>
-                <h3 class="title gap-tb-item-1">Plan Gratis</h3>
-                <p class="text-size-normal gap-tb-item-1">Pensado en emprendedores que recién inician y que tienen un catálogo de productos pequeño.</p>
-                <h4 class="title gap-tb-item-1">$0</h4>
-                <button class="button-primary gap-tb   -item-1">Elegir plan</button>
+                <h3 class="title gap-tb-item-1">Cuenta Gratis</h3>
+                <p class="text-size-normal gap-tb-item-1">Puedes disfrutar miles de productos frescos a precios justos.</p>
+                <h4 class="title gap-tb-item-1">$0 CLP</h4>
+                <button class="button-primary gap-tb-item-1">Elegir plan</button>
             </div>
             <div class="card-text">
                 <i class="fas fa-lemon fa-4x gap-tb-item-1"></i>
-                <h3 class="title gap-tb-item-1 ">Plan Lemon</h3>
-                <p class="text-size-normal gap-tb-item-1 ">Pensado en emprendedores que tienen un cátalogo amplio y necesitan vender online.</p>
-                <h4 class="title gap-tb-item-1 ">$2.500 CLP/mes</h4>
+                <h3 class="title gap-tb-item-1">Cuenta Lemon</h3>
+                <p class="text-size-normal gap-tb-item-1">Si haces compras frecuentes, puedes ahorrar tiempo y dinero.</p>
+                <h4 class="title gap-tb-item-1">$3.990 CLP</h4>
                 <button class="button-primary gap-tb-item-1">Elegir plan</button>
             </div>
         </div>
+    </section>
+    <section class="container-md">
         <h2 class="title center gap-tb-item-3">Funciones del plan</h2>
         <div class="table-plan">
             <table class="">
                 <!--Filas-->
+                <tr>
+                    <td></td>
+                </tr>
                 <tr>
                     <th></th>
                     <th class="table-title"><i class="fas fa-seedling fa-2x"></i></th>
@@ -76,8 +80,8 @@
                 </tr>
                 <tr>
                     <th></th>
-                    <th class="table-title align-middle">Plan Gratis</th>
-                    <th class="table-title align-middle">Plan Lemon</th>
+                    <th class="table-title align-middle">Cuenta Gratis</th>
+                    <th class="table-title align-middle">Cuenta Lemon</th>
                 </tr>
                 <tr>
                     <td class="table-feature table-title-s">Características</td>
@@ -86,56 +90,49 @@
                   
                 </tr>
                 <tr>
-                    <td class="table-feature">Productos</td>
-                    <td class="table-item">50</td>
-                    <td class="table-item">Ilimitados</td>
+                    <td class="table-feature">Envíos por mes</td>
+                    <td class="table-item">Ilimitado</td>
+                    <td class="table-item">Ilimitado</td>
                 </tr>
                 <tr>
-                    <td class="table-feature">Inventario de productos</td>
+                    <td class="table-feature">Envíos</td>
+                    <td class="table-item">$3.990</td>
+                    <td class="table-item">Sin costo</td>
+                </tr>
+                <tr>
+                    <td class="table-feature">Promociones exclusivas</td>
+                    <td class="table-item"><i class="fas fa-times-circle fa-lg"></i></td>
                     <td class="table-item"><i class="fas fa-check-circle fa-lg"></i></td>
+                </tr>
+                <tr>
+                    <td class="table-feature">Cancelación del pedido sin cargo</td>
+                    <td class="table-item">Hasta 30 minutos</td>
                     <td class="table-item"><i class="fas fa-check-circle fa-lg"></i></td>
                 </tr>
                 <tr>
-                    <td class="table-feature">Actualización de inventario</td>
-                    <td class="table-item">Cada 24 Horas</td>
-                    <td class="table-item">En tiempo real</td>
-                </tr>
-                <tr>
-                    <td class="table-feature">Reportes</td>
+                    <td class="table-feature">15% de descuento al final de tu compra</td>
                     <td class="table-item"><i class="fas fa-times-circle fa-lg"></i></td>
                     <td class="table-item"><i class="fas fa-check-circle fa-lg"></i></td>
                 </tr> 
                 <tr>
-                    <td class="table-feature">Visitas únicas por mes</td>
-                    <td class="table-item">~ 10.000</td>
-                    <td class="table-item">Ilimitadas</td>
-                </tr> 
-                <tr>
-                    <td class="table-feature">Itegraciones con metodos de pagos</td>
-                    <td class="table-item">No</td>
-                    <td class="table-item">Webpay</td>
+                    <td class="table-feature">Soporte prioritario</td>
+                    <td class="table-item"><i class="fas fa-times-circle fa-lg"></i></td>
+                    <td class="table-item"><i class="fas fa-check-circle fa-lg"></i></td>
                 </tr>
                 <tr>
-                    <td class="table-feature">Sin cargos de transacción</td>
-                    <td class="table-item"><i class="fas fa-check-circle fa-lg"></i></td>
-                    <td class="table-item"><i class="fas fa-check-circle fa-lg"></i></td>
-                </tr> 
-                <tr>
-                    <td class="table-feature">45 días de devolución de dinero</td>
-                    <td class="table-item"><i class="fas fa-check-circle fa-lg"></i></td>
-                    <td class="table-item"><i class="fas fa-check-circle fa-lg"></i></td>
+                    <td></td>
                 </tr>
             </table>
         </div>
     </section>
-    <h2 class="title center gap-tb-item-3">Beneficios</h2>
+    <h2 class="title center gap-tb-item-3">¿Preguntas?</h2>
     <section class="container-md grid-card-x3">
         <div class="card-mid">
             <a href="pages/planes.html">
                 <div class="content-card">
                     <i class="fas fa-laugh-beam fa-2x gap-tb-item-1 icon"></i>
-                    <h2 class="subtitle gap-tb-item-1">100% de satisfacción o garantía de devolución de dinero</h2>
-                    <p class="text-size-normal gap-tb-item-1">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <h2 class="subtitle-s gap-tb-item-1">¿Si no estás satisfecho con un producto?</h2>
+                    <p class="text-size-normal gap-tb-item-1">Recuperas tu dinero. Sin problemas, directo a tu cuenta bancaria.</p>
                 </div>
             </a>
          </div>
@@ -143,17 +140,17 @@
             <a href="pages/planes.html">
                 <div class="content-card">
                     <i class="fas fa-shopping-basket fa-2x gap-tb-item-1 icon"></i>
-                    <h2 class="subtitle gap-tb-item-1">Vende en todas partes</h2>
-                    <p class="text-size-normal gap-tb-item-1">Ofrecemos productos imperfectos, pero cuidadosamente seleccionados. Así evitamos el desperdicio de alimentos.</p>
+                    <h2 class="subtitle-s gap-tb-item-1">¿Hay una cantidad mínima de pedido?</h2>
+                    <p class="text-size-normal gap-tb-item-1">Puedes pedir desde $10.000CLP. ¡Tienes envios gratis e ilimitados en cuenta Lemon!</p>
                 </div>
             </a>
          </div>
          <div class="card-mid">
             <a href="pages/planes.html">
                 <div class="content-card">
-                    <i class="fab fa-pied-piper-pp fa-2x gap-tb-item-1 icon"></i>
-                    <h2 class="subtitle gap-tb-item-1">CDN de Pied Piper gratuito</h2>
-                    <p class="text-size-normal gap-tb-item-1">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsum dolor sit amet consectetur adipisicing elit. </p>
+                    <i class="fas fa-leaf fa-2x gap-tb-item-1 icon"></i>
+                    <h2 class="subtitle-s gap-tb-item-1">¿Puedo comprar sin cuenta Lemon?</h2>
+                    <p class="text-size-normal gap-tb-item-1">¡Si! eres libre de usar la cuenta gratis y disfrutar de todo el catálogo de productos.</p>
                 </div>
             </a>
          </div>
