--- a/pages/explorar.html
+++ b/pages/explorar.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>Explorar - Bluni</title>
+    <title>Explorar productos - Bluni</title>
 </head>
 <body>
     <header>
@@ -23,19 +23,19 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                       <li class="nav-item">
-                        <a class="nav-link fs-5" aria-current="page" href="../index.html">Inicio</a>
+                        <a class="nav-link fs-6" aria-current="page" href="../index.html">Inicio</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link fs-5" href="../pages/planes.html">Planes</a>
+                        <a class="nav-link active fs-6" href="../pages/explorar.html">Explorar productos</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link active fs-5" href="../pages/explorar.html">Explorar</a>
+                        <a class="nav-link fs-6" href="../pages/planes.html">Personaliza tu plan</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link fs-5" href="../pages/nosotros.html">Personas</a>
+                        <a class="nav-link fs-6" href="../pages/nosotros.html">Personas</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link fs-5" href="../pages/ayuda.html">Ayuda</a>
+                        <a class="nav-link fs-6" href="../pages/ayuda.html">Ayuda</a>
                       </li>
                     </ul>
                   </div>
