--- a/pages/planes.html
+++ b/pages/planes.html
@@ -4,7 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale = 1.0, maximum-scale=1.0, user-scalable=no">
-    <link rel="stylesheet" href="../css/styles.css">
+    <meta property="og:url" content="https://bluni.co/"/>
+    <meta property="og:title" content="Bluni - Planes"/>
+    <meta property="og:image" content="../image/og.png"/>
+    <meta property="og:description" content="Encuentra miles productos frescos de las granjas más cercanas a tu ubicación."/>
+    <meta property="og:type" content="website"/>
+    <meta name="description" content="Encuentra miles productos frescos de las granjas más cercanas a tu ubicación.">
+    <meta name="keywords" content="Productos frescos, productos frescos la huerta, productos frescos de la finca, productos de campo, pan de campo, fruta fresca">
+    <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
