--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale = 1.0, maximum-scale=1.0, user-scalable=no">
     <meta property="og:url" content="https://bluni.co/"/>
     <meta property="og:title" content="Bluni - Miles productos frescos"/>
-    <meta property="og:image" content="../image/og.png"/>
+    <meta property="og:image" content="https://bluni.netlify.app/image/og.png"/>
     <meta property="og:description" content="Encuentra miles productos frescos de las granjas más cercanas a tu ubicación."/>
     <meta property="og:type" content="website"/>
     <meta name="description" content="Encuentra miles productos frescos de las granjas más cercanas a tu ubicación.">
