ajustes de contenido

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -52,8 +52,7 @@
     </header>
     <section class="hero hero-page">
         <div class="content">    
-            <h1 class="title-xl gap-tb-item-2">Descubre las características de los planes que tenemos para ti</h1>
-            <p class="text-size-normal">Maneje su inventario y venda desde un mismo sitio</p>
+            <h1 class="title-xl gap-tb-item-2">Creemos que los productos frescos beneficia a los agricultores y a las personas</h1>
         </div>
     </section>
     <section class="container-md">
@@ -85,8 +84,8 @@
             <img src="../image/hero-team.jpg" alt="sale">
             <div class="content-card">
                 <i class="fas fa-leaf fa-2x gap-tb-item-1 icon"></i>
-                <h2 class="subtitle spacing-item-1">Nuestro comprimiso con los productos orgánicos</h2>
-                <p class="text-size-normal gap-tb-item-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga accusamus ipsum a minus officiis necessitatibus soluta id tempora incidunt consectetur, nulla quae, ex sequi reiciendis quo quibusdam enim natus. Veniam.</p>
+                <h2 class="subtitle spacing-item-1">Nuestro comprimiso con las personas y los productos frescos</h2>
+                <p class="text-size-normal gap-tb-item-1">Bluni es un mercado digital donde los agricultores pueden vender sus productos frescos los siete días de la semana. Nuestro mercado online busca apoyar a los agricultores de las regiones de Chile para que puedan vender todos sus productos a precio justo sin intermediarios. Fomentamos el uso responsable del agua y evitar los plásticos de un solo uso.</p>
             </div>
          </div>
     </section>
